[B] Fix overflow bug in IE 11 with tile-style list items
Resolves #1498

--- a/client/src/theme/Components/backend/_vertical-list.scss
+++ b/client/src/theme/Components/backend/_vertical-list.scss
@@ -64,10 +64,22 @@
 
     @include respond($break60) {
       margin-left: -40px;
+
+      li {
+        flex-basis: 100%;
+        max-width: 100%;
+      }
     }
 
     @include respond($break65) {
       margin-left: -24px;
+    }
+
+    @include respond($break95) {
+      li {
+        flex-basis: 50%;
+        max-width: 50%;
+      }
     }
 
     @include respond($break110) {
